# nyaa-watcher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: main.rs  nyaa.rs
ui/: main.slint
